--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,10 @@
 	margin: 0;
 }
 
+html {
+	font-family: 'Trebuchet MS', 'Helvetica', sans-serif;
+}
+
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -10,6 +14,14 @@
 
 .h-70px {
 	height: 70px;
+}
+
+.w-50 {
+	width: 50%;
+}
+
+.w-100 {
+	width: 100%;
 }
 
 .w-300px {
@@ -26,6 +38,19 @@ button {
 	cursor: pointer;
 }
 
+input {
+	padding: 0.25rem;
+	border: 1px solid gray;
+	border-radius: 0.25rem;
+	outline: none;
+}
+
+textarea {
+	min-height: calc(2.5rem + 4px);
+	padding: 0.25rem;
+	border-radius: 0.25rem;
+}
+
 a {
 	color: black;
 	text-decoration: none;
@@ -39,11 +64,36 @@ a.active {
 .btn {
 	padding: 0.5rem 0.75rem;
 	border-radius: 0.5rem;
+	transition: background-color ease-in-out 0.2s;
+}
+
+.btn-icon {
+	display: flex;
+	padding: 0.5rem;
 }
 
 .btn-primary {
-	background-color: dodgerblue;
+	background-color: hsl(210, 100%, 56%);
 	color: #f8f8f8;
+}
+
+.btn-primary:hover {
+	background-color: hsl(210, 100%, 42%);
+	color: #f8f8f8;
+}
+
+.btn-light {
+	background-color: hsl(0, 0%, 83%);
+}
+
+.btn-light:hover {
+	background-color: hsl(0, 0%, 75%);
+}
+
+.badge {
+	padding: 0.15rem 0.25rem;
+	background-color: lightcoral;
+	border-radius: 0.5rem;
 }
 
 .dropdown {
@@ -135,6 +185,38 @@ a.active {
 	padding: 2.5rem;
 }
 
+.px-1 {
+	padding: 0 0.25rem;
+}
+
+.px-2 {
+	padding: 0 0.5rem;
+}
+
+.px-3 {
+	padding: 0 0.75rem;
+}
+
+.px-4 {
+	padding: 0 1rem;
+}
+
+.pt-1 {
+	padding-top: 0.25rem;
+}
+
+.pt-2 {
+	padding-top: 0.5rem;
+}
+
+.pt-3 {
+	padding-top: 0.75rem;
+}
+
+.pt-4 {
+	padding-top: 1rem;
+}
+
 .mb-1 {
 	margin-bottom: 0.25rem;
 }
@@ -166,6 +248,26 @@ a.active {
 	margin-bottom: 2.5rem;
 }
 
+.mx-n1 {
+	margin-left: -0.25rem;
+	margin-right: -0.25rem;
+}
+
+.mx-n2 {
+	margin-left: -0.5rem;
+	margin-right: -0.5rem;
+}
+
+.mx-n3 {
+	margin-left: -0.75rem;
+	margin-right: -0.75rem;
+}
+
+.mx-n4 {
+	margin-left: -1rem;
+	margin-right: -1rem;
+}
+
 .d-flex {
 	display: flex;
 }
@@ -180,6 +282,10 @@ a.active {
 
 .align-center {
 	align-items: center;
+}
+
+.align-start {
+	align-items: start;
 }
 
 .justify-between {
@@ -226,6 +332,26 @@ a.active {
 	gap: 2rem;
 }
 
+.text-gray {
+	color: rgb(92, 92, 92);
+}
+
+.text-primary {
+	color: dodgerblue;
+}
+
+.text-success {
+	color: green;
+}
+
+.text-danger {
+	color: firebrick;
+}
+
+.border-top {
+	border-top: 1px solid gray;
+}
+
 .topbar {
 	display: flex;
 	flex: 1;
@@ -236,6 +362,73 @@ a.active {
 	padding: 1rem;
 	background-color: rgba(224, 240, 248, 0.5);
 	border-radius: 2rem;
+}
+
+.menu {
+	width: 200px;
+	display: flex;
+	flex-direction: column;
+	padding: 0.5rem 0;
+}
+
+.menu .menu-item {
+	position: relative;
+	padding: 0.75rem;
+	background-color: hsl(204, 63%, 97%);
+}
+
+.menu .menu-item:first-child {
+	border-top-right-radius: 1rem;
+}
+
+.menu .menu-item:last-child {
+	border-bottom-right-radius: 1rem;
+}
+
+.menu .menu-item.active {
+	background: #fff;
+}
+
+.menu .menu-item.active:not(:first-child)::before {
+	content: '';
+	position: absolute;
+	width: 1rem;
+	height: 1rem;
+	top: -1rem;
+	right: 0;
+	background-color: white;
+}
+
+.menu .menu-item.active:not(:first-child)::after {
+	content: '';
+	position: absolute;
+	width: 1rem;
+	height: 1rem;
+	top: -1rem;
+	right: 0;
+	background-color: hsl(204, 63%, 97%);
+	border-bottom-right-radius: 1rem;
+}
+
+.menu .menu-item.active + .menu-item::before {
+	content: '';
+	position: absolute;
+	width: 1rem;
+	height: 1rem;
+	right: 0;
+	top: 0;
+	background-color: white;
+}
+
+.menu .menu-item.active + .menu-item::after {
+	content: '';
+	position: absolute;
+	width: 1rem;
+	height: 1rem;
+	right: 0;
+	top: 0;
+	background-color: hsl(204, 63%, 97%);
+	border-top-right-radius: 1rem;
 }
 
 .modal-backdrop {
@@ -253,22 +446,46 @@ a.active {
 	left: 50%;
 	width: 90%;
 	max-width: 600px;
-	padding: 2rem;
+	padding: 1rem;
 	background-color: #f8f8f8;
 	border: 1px solid gray;
 	translate: -50% -50%;
 	border-radius: 1rem;
 }
 
+.toggle-box {
+	position: relative;
+}
+
+.toggle-content {
+	position: absolute;
+	top: calc(100% + 0.25rem);
+	right: 0;
+	padding: 0.5rem;
+	border: 1px solid lightgray;
+	border-radius: 0.25rem;
+	background-color: white;
+}
+
 .note {
+	padding: 0.75rem;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
 	border: 1px solid gray;
 	border-radius: 0.5rem;
-	padding: 0.75rem;
+	box-shadow: -3px 3px 10px 3px rgba(224, 224, 224, 0.5);
 }
 
 .note.favourite {
-	border-color: rgb(206, 206, 10);
+	border-color: rgb(224, 224, 128);
 	border-width: 2px;
+	box-shadow: -3px 3px 10px 3px rgba(224, 224, 12, 0.5);
+}
+
+.note .note-title {
+	font-size: 1.1rem;
+	font-weight: bold;
 }
 
 .tag {
