--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,6 +7,31 @@ html {
 	font-family: 'Poppins', 'Trebuchet MS', 'Helvetica', sans-serif;
 }
 
+nav .link {
+	position: relative;
+}
+
+nav .link:not(.active)::after {
+	content: '';
+	position: absolute;
+	left: auto;
+	right: 0;
+	bottom: -3px;
+	width: 0%;
+	height: 2px;
+	background-color: black;
+	transition: width 0.2s ease-in-out;
+}
+
+nav .link:not(.active):hover::after {
+	content: '';
+	position: absolute;
+	width: 100%;
+	left: 0;
+	right: auto;
+	background-color: black;
+}
+
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -359,35 +384,24 @@ a.active {
 	margin: 2.5rem;
 }
 
-.mb-1 {
-	margin-bottom: 0.25rem;
+.mx-n1 {
+	margin-left: -0.25rem;
+	margin-right: -0.25rem;
 }
-.mb-2 {
-	margin-bottom: 0.5rem;
+
+.mx-n2 {
+	margin-left: -0.5rem;
+	margin-right: -0.5rem;
 }
-.mb-3 {
-	margin-bottom: 0.75rem;
+
+.mx-n3 {
+	margin-left: -0.75rem;
+	margin-right: -0.75rem;
 }
-.mb-4 {
-	margin-bottom: 1rem;
-}
-.mb-5 {
-	margin-bottom: 1.25rem;
-}
-.mb-6 {
-	margin-bottom: 1.5rem;
-}
-.mb-7 {
-	margin-bottom: 1.75rem;
-}
-.mb-8 {
-	margin-bottom: 2rem;
-}
-.mb-9 {
-	margin-bottom: 2.25rem;
-}
-.mb-10 {
-	margin-bottom: 2.5rem;
+
+.mx-n4 {
+	margin-left: -1rem;
+	margin-right: -1rem;
 }
 
 .mt-1 {
@@ -421,24 +435,35 @@ a.active {
 	margin-top: 2.5rem;
 }
 
-.mx-n1 {
-	margin-left: -0.25rem;
-	margin-right: -0.25rem;
+.mb-1 {
+	margin-bottom: 0.25rem;
 }
-
-.mx-n2 {
-	margin-left: -0.5rem;
-	margin-right: -0.5rem;
+.mb-2 {
+	margin-bottom: 0.5rem;
 }
-
-.mx-n3 {
-	margin-left: -0.75rem;
-	margin-right: -0.75rem;
+.mb-3 {
+	margin-bottom: 0.75rem;
 }
-
-.mx-n4 {
-	margin-left: -1rem;
-	margin-right: -1rem;
+.mb-4 {
+	margin-bottom: 1rem;
+}
+.mb-5 {
+	margin-bottom: 1.25rem;
+}
+.mb-6 {
+	margin-bottom: 1.5rem;
+}
+.mb-7 {
+	margin-bottom: 1.75rem;
+}
+.mb-8 {
+	margin-bottom: 2rem;
+}
+.mb-9 {
+	margin-bottom: 2.25rem;
+}
+.mb-10 {
+	margin-bottom: 2.5rem;
 }
 
 .d-flex {
@@ -587,6 +612,10 @@ a.active {
 	border-top: 1px solid gray;
 }
 
+.border-light {
+	border-color: lightgray;
+}
+
 .rounded,
 .rounded-1 {
 	border-radius: 0.25rem;
@@ -619,69 +648,28 @@ a.active {
 
 .menu {
 	width: 200px;
+	margin-left: 1rem;
+	margin-top: 1.25rem;
 	display: flex;
 	flex-direction: column;
-	padding: 0.5rem 0;
+	border-radius: 0.75rem;
+	box-shadow: 0 0 5px rgba(0, 0, 36, 0.5);
+	overflow: hidden;
 }
 
 .menu .menu-item {
 	position: relative;
 	padding: 0.75rem;
 	background-color: hsl(204, 63%, 97%);
+	transition: color 0.2s ease-in-out;
 }
 
-.menu .menu-item:first-child {
-	border-top-right-radius: 1rem;
-}
-
-.menu .menu-item:last-child {
-	border-bottom-right-radius: 1rem;
+.menu .menu-item:hover {
+	color: dodgerblue;
 }
 
 .menu .menu-item.active {
 	background: #fff;
-}
-
-.menu .menu-item.active:not(:first-child)::before {
-	content: '';
-	position: absolute;
-	width: 1rem;
-	height: 1rem;
-	top: -1rem;
-	right: 0;
-	background-color: white;
-}
-
-.menu .menu-item.active:not(:first-child)::after {
-	content: '';
-	position: absolute;
-	width: 1rem;
-	height: 1rem;
-	top: -1rem;
-	right: 0;
-	background-color: hsl(204, 63%, 97%);
-	border-bottom-right-radius: 1rem;
-}
-
-.menu .menu-item.active + .menu-item::before {
-	content: '';
-	position: absolute;
-	width: 1rem;
-	height: 1rem;
-	right: 0;
-	top: 0;
-	background-color: white;
-}
-
-.menu .menu-item.active + .menu-item::after {
-	content: '';
-	position: absolute;
-	width: 1rem;
-	height: 1rem;
-	right: 0;
-	top: 0;
-	background-color: hsl(204, 63%, 97%);
-	border-top-right-radius: 1rem;
 }
 
 .modal-backdrop {
@@ -724,13 +712,13 @@ a.active {
 	justify-content: space-between;
 	align-items: center;
 	gap: 1rem;
+	padding: 1rem;
+	border-bottom: 1px solid lightgray;
 }
 
 .card-title {
 	font-weight: bold;
 	font-size: 1.15rem;
-	padding: 1rem;
-	border-bottom: 1px solid lightgray;
 }
 
 .card-subtitle {
@@ -754,11 +742,12 @@ a.active {
 .form-row {
 	display: flex;
 	flex-wrap: wrap;
+	align-items: center;
 }
 
 .form-row-label {
 	width: calc(4 / 12 * 100%);
-	padding: 0 0.5rem;
+	padding: 0.25rem 0.5rem;
 	text-align: end;
 }
 
