--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -722,6 +722,9 @@ a.active {
 }
 
 .card-subtitle {
+	display: flex;
+	justify-content: space-between;
+	gap: 1rem;
 	background-color: rgb(236, 236, 236);
 	margin-left: -1rem;
 	margin-right: -1rem;
