--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -89,6 +89,10 @@ nav .link:not(.active):hover::after {
 	width: 300px;
 }
 
+.min-w-200px {
+	min-width: 200px !important;
+}
+
 .max-w-1200px {
 	max-width: 1200px !important;
 }
@@ -111,7 +115,9 @@ button {
 	cursor: pointer;
 }
 
-input {
+input:not([type='checkbox']),
+select {
+	min-width: 125px;
 	padding: 0.25rem;
 	border: 1px solid gray;
 	border-radius: 0.25rem;
@@ -124,7 +130,7 @@ textarea {
 	border-radius: 0.25rem;
 }
 
-input:focus,
+input:not([type='checkbox']):focus,
 textarea:focus {
 	box-shadow: 0 0 8px rgba(128, 128, 128, 0.5);
 }
@@ -138,7 +144,8 @@ a {
 	text-decoration: none;
 }
 
-a.active {
+a.active,
+.link.active {
 	font-weight: bold;
 	color: dodgerblue;
 }
@@ -220,6 +227,217 @@ a.active {
 	background-image: url('../public/personal-manager-welcome-v2.jpg');
 	background-position: center;
 	background-size: cover;
+}
+
+.topbar {
+	display: flex;
+	flex: 1;
+	gap: 1.25rem;
+	justify-content: space-between;
+	align-items: center;
+	margin: 1rem;
+	padding: 0.5rem 1rem;
+	background-color: rgba(224, 240, 248, 0.5);
+	border-radius: 2rem;
+	box-shadow: 0 0 5px rgba(0, 0, 36, 0.5);
+}
+
+.menu {
+	width: 200px;
+	margin-left: 1rem;
+	margin-top: 1.25rem;
+	display: flex;
+	flex-direction: column;
+	border-radius: 0.75rem;
+	box-shadow: 0 0 5px rgba(0, 0, 36, 0.5);
+	overflow: hidden;
+}
+
+.menu .menu-item {
+	position: relative;
+	padding: 0.75rem;
+	background-color: hsl(204, 63%, 97%);
+	transition: color 0.2s ease-in-out;
+}
+
+.menu .menu-item:hover {
+	color: dodgerblue;
+}
+
+.menu .menu-item.active {
+	background: #fff;
+}
+
+.modal-backdrop {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.5);
+	backdrop-filter: blur(2px);
+}
+
+.modal {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	width: 90%;
+	max-width: 600px;
+	padding: 1rem;
+	background-color: #f8f8f8;
+	border: 1px solid gray;
+	translate: -50% -50%;
+	border-radius: 1rem;
+}
+
+.modal-title {
+	font-weight: bold;
+	font-size: 1.15rem;
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	border: 1px solid lightgray;
+	border-radius: 1rem;
+	box-shadow: 0 0 5px rgb(192, 192, 192);
+}
+
+.card-header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 1rem;
+	padding: 1rem;
+	border-bottom: 1px solid lightgray;
+}
+
+.card-title {
+	font-weight: bold;
+	font-size: 1.15rem;
+}
+
+.card-subtitle {
+	display: flex;
+	justify-content: space-between;
+	gap: 1rem;
+	background-color: rgb(236, 236, 236);
+	margin-left: -1rem;
+	margin-right: -1rem;
+	padding: 0.75rem 1rem;
+	border-top: 1px solid lightgray;
+	border-bottom: 1px solid lightgray;
+}
+
+.card-content {
+	padding: 1rem;
+}
+
+.card-footer {
+	padding: 1rem;
+	border-top: 1px solid lightgray;
+}
+
+.form-row {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+}
+
+.form-row-label {
+	width: calc(4 / 12 * 100%);
+	padding: 0.25rem 0.5rem;
+	text-align: end;
+}
+
+.form-row-content {
+	width: calc(8 / 12 * 100%);
+	display: flex;
+	flex-direction: column;
+	padding: 0 0.5rem;
+	font-weight: bold;
+}
+
+.toggle-box {
+	position: relative;
+}
+
+.toggle-content {
+	position: absolute;
+	top: calc(100% + 0.25rem);
+	right: 0;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+	padding: 0.5rem 1rem;
+	border: 1px solid lightgray;
+	border-radius: 0.25rem;
+	background-color: white;
+	box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
+}
+
+.toggle-title {
+	font-weight: bold;
+	margin: 0 -1rem;
+	padding: 0.25rem 1rem;
+	background-color: rgb(242, 242, 242);
+	border-top: 1px solid lightgray;
+	border-bottom: 1px solid lightgray;
+}
+
+.toggle-subtitle {
+	font-weight: bold;
+}
+
+.toggle-separator {
+	margin: 0.25rem -1rem;
+	padding: 0 1rem;
+	border-bottom: 1px solid lightgray;
+}
+
+.note {
+	padding: 0.75rem;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+	border: 1px solid gray;
+	border-radius: 0.5rem;
+	box-shadow: -3px 3px 10px 3px rgba(224, 224, 224, 0.5);
+}
+
+.note.favourite {
+	border-color: rgb(224, 224, 128);
+	border-width: 2px;
+	box-shadow: -3px 3px 10px 3px rgba(224, 224, 12, 0.5);
+}
+
+.note .note-title {
+	font-size: 1.1rem;
+	font-weight: bold;
+}
+
+.tag {
+	padding: 0.2rem 0.3rem;
+	background-color: lightgray;
+	border-radius: 0.75rem;
+	font-size: 0.875rem;
+}
+
+.carousel {
+	display: flex;
+	position: relative;
+	overflow: hidden;
+}
+
+.carousel-track {
+	display: flex;
+	transition: transform ease-in-out 1s;
+}
+
+.carousel-item {
+	min-width: 100%;
+	display: flex;
+	justify-content: center;
 }
 
 .shadow {
@@ -468,6 +686,19 @@ a.active {
 	margin-top: 2.5rem;
 }
 
+.mt-n1 {
+	margin-top: -0.25rem;
+}
+.mt-n2 {
+	margin-top: -0.5rem;
+}
+.mt-n3 {
+	margin-top: -0.75rem;
+}
+.mt-n4 {
+	margin-top: -1rem;
+}
+
 .mb-1 {
 	margin-bottom: 0.25rem;
 }
@@ -526,6 +757,10 @@ a.active {
 
 .align-self-center {
 	align-self: center;
+}
+
+.align-self-start {
+	align-self: flex-start;
 }
 
 .justify-between {
@@ -649,6 +884,10 @@ a.active {
 	border-top: 1px solid gray;
 }
 
+.border-top-0 {
+	border-top-width: 0;
+}
+
 .border-light {
 	border-color: lightgray;
 }
@@ -668,213 +907,4 @@ a.active {
 
 .rounded-4 {
 	border-radius: 1rem;
-}
-
-.topbar {
-	display: flex;
-	flex: 1;
-	gap: 1.25rem;
-	justify-content: space-between;
-	align-items: center;
-	margin: 1rem;
-	padding: 0.5rem 1rem;
-	background-color: rgba(224, 240, 248, 0.5);
-	border-radius: 2rem;
-	box-shadow: 0 0 5px rgba(0, 0, 36, 0.5);
-}
-
-.menu {
-	width: 200px;
-	margin-left: 1rem;
-	margin-top: 1.25rem;
-	display: flex;
-	flex-direction: column;
-	border-radius: 0.75rem;
-	box-shadow: 0 0 5px rgba(0, 0, 36, 0.5);
-	overflow: hidden;
-}
-
-.menu .menu-item {
-	position: relative;
-	padding: 0.75rem;
-	background-color: hsl(204, 63%, 97%);
-	transition: color 0.2s ease-in-out;
-}
-
-.menu .menu-item:hover {
-	color: dodgerblue;
-}
-
-.menu .menu-item.active {
-	background: #fff;
-}
-
-.modal-backdrop {
-	position: fixed;
-	top: 0;
-	width: 100%;
-	height: 100vh;
-	background-color: rgba(0, 0, 0, 0.5);
-	backdrop-filter: blur(2px);
-}
-
-.modal {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	width: 90%;
-	max-width: 600px;
-	padding: 1rem;
-	background-color: #f8f8f8;
-	border: 1px solid gray;
-	translate: -50% -50%;
-	border-radius: 1rem;
-}
-
-.modal-title {
-	font-weight: bold;
-	font-size: 1.15rem;
-}
-
-.card {
-	display: flex;
-	flex-direction: column;
-	border: 1px solid lightgray;
-	border-radius: 1rem;
-	box-shadow: 0 0 5px rgb(192, 192, 192);
-}
-
-.card-header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	gap: 1rem;
-	padding: 1rem;
-	border-bottom: 1px solid lightgray;
-}
-
-.card-title {
-	font-weight: bold;
-	font-size: 1.15rem;
-}
-
-.card-subtitle {
-	display: flex;
-	justify-content: space-between;
-	gap: 1rem;
-	background-color: rgb(236, 236, 236);
-	margin-left: -1rem;
-	margin-right: -1rem;
-	padding: 0.75rem 1rem;
-	border-top: 1px solid lightgray;
-	border-bottom: 1px solid lightgray;
-}
-
-.card-content {
-	padding: 1rem;
-}
-
-.card-footer {
-	padding: 1rem;
-	border-top: 1px solid lightgray;
-}
-
-.form-row {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-}
-
-.form-row-label {
-	width: calc(4 / 12 * 100%);
-	padding: 0.25rem 0.5rem;
-	text-align: end;
-}
-
-.form-row-content {
-	width: calc(8 / 12 * 100%);
-	padding: 0 0.5rem;
-	font-weight: bold;
-}
-
-.toggle-box {
-	position: relative;
-}
-
-.toggle-content {
-	position: absolute;
-	top: calc(100% + 0.25rem);
-	right: 0;
-	display: flex;
-	flex-direction: column;
-	gap: 0.5rem;
-	padding: 0.5rem 1rem;
-	border: 1px solid lightgray;
-	border-radius: 0.25rem;
-	background-color: white;
-	box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
-}
-
-.toggle-title {
-	font-weight: bold;
-	margin: 0 -1rem;
-	padding: 0.25rem 1rem;
-	background-color: rgb(242, 242, 242);
-	border-top: 1px solid lightgray;
-	border-bottom: 1px solid lightgray;
-}
-
-.toggle-subtitle {
-	font-weight: bold;
-}
-
-.toggle-separator {
-	margin: 0.25rem -1rem;
-	padding: 0 1rem;
-	border-bottom: 1px solid lightgray;
-}
-
-.note {
-	padding: 0.75rem;
-	display: flex;
-	flex-direction: column;
-	gap: 0.5rem;
-	border: 1px solid gray;
-	border-radius: 0.5rem;
-	box-shadow: -3px 3px 10px 3px rgba(224, 224, 224, 0.5);
-}
-
-.note.favourite {
-	border-color: rgb(224, 224, 128);
-	border-width: 2px;
-	box-shadow: -3px 3px 10px 3px rgba(224, 224, 12, 0.5);
-}
-
-.note .note-title {
-	font-size: 1.1rem;
-	font-weight: bold;
-}
-
-.tag {
-	padding: 0.2rem 0.3rem;
-	background-color: lightgray;
-	border-radius: 0.75rem;
-	font-size: 0.875rem;
-}
-
-.carousel {
-	display: flex;
-	position: relative;
-	overflow: hidden;
-}
-
-.carousel-track {
-	display: flex;
-	transition: transform ease-in-out 1s;
-}
-
-.carousel-item {
-	min-width: 100%;
-	display: flex;
-	justify-content: center;
 }
