--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -244,10 +244,9 @@ a.active,
 
 .menu {
 	width: 200px;
-	margin-left: 1rem;
-	margin-top: 1.25rem;
 	display: flex;
 	flex-direction: column;
+	flex-shrink: 0;
 	border-radius: 0.75rem;
 	box-shadow: 0 0 5px rgba(0, 0, 36, 0.5);
 	overflow: hidden;
@@ -258,6 +257,7 @@ a.active,
 	padding: 0.75rem;
 	background-color: hsl(204, 63%, 97%);
 	transition: color 0.2s ease-in-out;
+	white-space: nowrap;
 }
 
 .menu .menu-item:hover {
@@ -266,6 +266,11 @@ a.active,
 
 .menu .menu-item.active {
 	background: #fff;
+}
+
+.content-container {
+	width: calc(100% - (200px+1.25rem));
+	max-width: 1200px;
 }
 
 .modal-backdrop {
@@ -786,6 +791,37 @@ a.active,
 	margin-bottom: 2.5rem;
 }
 
+.mr-1 {
+	margin-right: 0.25rem;
+}
+.mr-2 {
+	margin-right: 0.5rem;
+}
+.mr-3 {
+	margin-right: 0.75rem;
+}
+.mr-4 {
+	margin-right: 1rem;
+}
+.mr-5 {
+	margin-right: 1.25rem;
+}
+.mr-6 {
+	margin-right: 1.5rem;
+}
+.mr-7 {
+	margin-right: 1.75rem;
+}
+.mr-8 {
+	margin-right: 2rem;
+}
+.mr-9 {
+	margin-right: 2.25rem;
+}
+.mr-10 {
+	margin-right: 2.5rem;
+}
+
 .d-flex {
 	display: flex;
 }
@@ -869,6 +905,10 @@ a.active,
 
 .text-bold {
 	font-weight: bold;
+}
+
+.text-nowrap {
+	white-space: nowrap;
 }
 
 .text-center {
@@ -984,4 +1024,10 @@ a.active,
 .rounded-bottom-4 {
 	border-bottom-left-radius: 1rem;
 	border-bottom-right-radius: 1rem;
+}
+
+.scroll-x-auto {
+	overflow-x: auto;
+	white-space: nowrap;
+	width: auto;
 }
