Modals styles unifications, added tasksSettings functionalities

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,11 +38,6 @@ nav .link:not(.active):hover::after {
 	background-color: black;
 }
 
-.mx-auto {
-	margin-left: auto;
-	margin-right: auto;
-}
-
 .wrapper {
 	width: 95%;
 	max-width: 1400px;
@@ -300,7 +295,6 @@ a.active,
 	left: 50%;
 	width: 90%;
 	max-width: 600px;
-	padding: 1rem;
 	background-color: #f8f8f8;
 	border: 1px solid gray;
 	translate: -50% -50%;
@@ -318,6 +312,7 @@ a.active,
 	border: 1px solid lightgray;
 	border-radius: 1rem;
 	box-shadow: 0 0 5px rgb(192, 192, 192);
+	overflow: hidden;
 }
 
 .card-header {
@@ -339,8 +334,6 @@ a.active,
 	justify-content: space-between;
 	gap: 1rem;
 	background-color: rgb(236, 236, 236);
-	margin-left: -1rem;
-	margin-right: -1rem;
 	padding: 0.75rem 1.5rem;
 	border-top: 1px solid lightgray;
 	border-bottom: 1px solid lightgray;
@@ -352,6 +345,12 @@ a.active,
 
 .card-content {
 	padding: 1rem;
+	border-top: 1px solid lightgray;
+}
+
+.card-content .card-subtitle {
+	margin-left: -1rem;
+	margin-right: -1rem;
 }
 
 .card.card-p0 .card-content {
@@ -362,6 +361,8 @@ a.active,
 	padding: 1rem 1.5rem;
 	border-top: 1px solid lightgray;
 	background-color: rgb(236, 236, 236);
+	border-bottom-right-radius: 1rem;
+	border-bottom-left-radius: 1rem;
 }
 
 .form-row {
@@ -651,6 +652,10 @@ a.active,
 	padding-right: 1rem;
 }
 
+.pt-0 {
+	padding-top: 0;
+}
+
 .pt-1 {
 	padding-top: 0.25rem;
 }
@@ -725,6 +730,16 @@ a.active,
 
 .m-10 {
 	margin: 2.5rem;
+}
+
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.mx-0 {
+	margin-right: 0;
+	margin-left: 0;
 }
 
 .mx-n1 {
@@ -1044,8 +1059,20 @@ a.active,
 	border-color: lightgray;
 }
 
+.border-gray {
+	border-color: gray;
+}
+
 .border-primary {
 	border-color: dodgerblue;
+}
+
+.border-none {
+	border: none;
+}
+
+.border-top-none {
+	border-top: none;
 }
 
 .rounded,
