Api  refactor, delete dashboard feature, notes content styles update

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -652,6 +652,26 @@ a.active,
 	padding-right: 1rem;
 }
 
+.py-1 {
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+}
+
+.py-2 {
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+}
+
+.py-3 {
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
+}
+
+.py-4 {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+}
+
 .pt-0 {
 	padding-top: 0;
 }
