--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -96,6 +96,10 @@ nav .link:not(.active):hover::after {
 	min-width: 200px !important;
 }
 
+.max-w-200px {
+	max-width: 200px;
+}
+
 .max-w-1200px {
 	max-width: 1200px !important;
 }
@@ -135,6 +139,19 @@ textarea {
 	min-height: calc(2.5rem + 4px);
 	padding: 0.25rem;
 	border-radius: 0.25rem;
+}
+
+.required,
+.required {
+	position: relative;
+}
+
+.required::after {
+	content: '*';
+	color: firebrick;
+	position: absolute;
+	right: -2px;
+	font-size: 1.2rem;
 }
 
 input:not([type='checkbox']):focus,
@@ -312,13 +329,13 @@ a.active,
 	border: 1px solid lightgray;
 	border-radius: 1rem;
 	box-shadow: 0 0 5px rgb(192, 192, 192);
-	overflow: hidden;
 }
 
 .card-header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	flex-wrap: wrap;
 	gap: 1rem;
 	padding: 1rem;
 	border-bottom: 1px solid lightgray;
@@ -380,7 +397,8 @@ a.active,
 .form-row-content {
 	width: calc(8 / 12 * 100%);
 	display: flex;
-	flex-direction: column;
+	flex-wrap: wrap;
+	gap: 0.5rem;
 	align-items: flex-start;
 	padding: 0 0.5rem;
 	font-weight: bold;
@@ -690,6 +708,26 @@ a.active,
 
 .pt-4 {
 	padding-top: 1rem;
+}
+
+.pb-0 {
+	padding-bottom: 0;
+}
+
+.pb-1 {
+	padding-bottom: 0.25rem;
+}
+
+.pb-2 {
+	padding-bottom: 0.5rem;
+}
+
+.pb-3 {
+	padding-bottom: 0.75rem;
+}
+
+.pb-4 {
+	padding-bottom: 1rem;
 }
 
 .pr-1 {
