--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -193,7 +193,7 @@ a.active,
 }
 
 .btn-lg {
-	padding: .75rem 1rem;
+	padding: 0.75rem 1rem;
 	font-size: 1.2rem;
 }
 
@@ -1063,6 +1063,10 @@ td {
 	text-align: inherit;
 	padding: 0.25rem;
 	border: inherit;
+}
+
+tbody tr.border-bottom:last-child {
+	border-bottom: 0;
 }
 
 .text-bold {
