Shopping list styles and summary

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1089,6 +1089,10 @@ tbody tr.border-bottom:last-child {
 	text-align: start;
 }
 
+.text-end {
+	text-align: end;
+}
+
 .text-fill {
 	width: max-content;
 	max-width: 100%;
