--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -284,21 +284,30 @@ a.active,
 }
 
 .menu {
-	width: 200px;
 	display: flex;
-	flex-direction: column;
-	flex-shrink: 0;
+	flex-direction: row;
 	border-radius: 0.75rem;
 	box-shadow: 0 0 5px rgba(0, 0, 36, 0.5);
-	overflow: hidden;
+	overflow-x: auto;
 }
 
 .menu .menu-item {
+	flex: 1;
 	position: relative;
 	padding: 0.75rem;
 	background-color: hsl(204, 63%, 97%);
 	transition: color 0.2s ease-in-out;
 	white-space: nowrap;
+	text-align: center;
+}
+
+.menu .menu-item:first-child {
+	border-top-left-radius: 0.75rem;
+	border-bottom-left-radius: 0.75rem;
+}
+.menu .menu-item:last-child {
+	border-top-right-radius: 0.75rem;
+	border-bottom-right-radius: 0.75rem;
 }
 
 .menu .menu-item:hover {
@@ -309,9 +318,14 @@ a.active,
 	background: #fff;
 }
 
+.page-wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	padding: 1.25rem;
+}
+
 .content-container {
-	width: calc(100% - (200px + 1.25rem));
-	max-width: 1200px;
 }
 
 .modal-backdrop {
@@ -972,6 +986,10 @@ a.active,
 	display: block;
 }
 
+.d-none {
+	display: none;
+}
+
 .flex-column {
 	flex-direction: column;
 }
@@ -1232,4 +1250,40 @@ tbody tr.border-bottom:last-child {
 	overflow-x: auto;
 	white-space: nowrap;
 	width: auto;
+}
+
+@media (min-width: 576px) {
+	.d-inline-sm {
+		display: inline;
+	}
+
+	.d-block-sm {
+		display: block;
+	}
+
+	.page-wrapper {
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: flex-start;
+	}
+
+	.content-container {
+		width: calc(100% - (200px + 1.25rem));
+		max-width: 1200px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.menu {
+		width: 200px;
+		flex-direction: column;
+		flex-shrink: 0;
+		border-radius: 0.75rem;
+		box-shadow: 0 0 5px rgba(0, 0, 36, 0.5);
+		overflow: hidden;
+	}
+
+	.menu .menu-item {
+		text-align: start;
+	}
 }
