--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -273,7 +273,7 @@ a.active,
 .topbar {
 	display: flex;
 	flex: 1;
-	gap: 1.25rem;
+	gap: 1rem;
 	justify-content: space-between;
 	align-items: center;
 	margin: 1rem;
@@ -323,9 +323,6 @@ a.active,
 	flex-direction: column;
 	gap: 1rem;
 	padding: 1.25rem;
-}
-
-.content-container {
 }
 
 .modal-backdrop {
@@ -530,14 +527,16 @@ a.active,
 .dropdown {
 	position: relative;
 	padding: 0.25rem;
-	background-color: black;
+	background-color: dodgerblue;
 	border-radius: 1.5rem;
+	z-index: 50;
 }
 
 .dropdown-btn {
 	display: flex;
 	gap: 0.75rem;
 	align-items: center;
+	padding: 0;
 }
 
 .dropdown-title {
@@ -547,8 +546,13 @@ a.active,
 
 .dropdown-avatar {
 	background-color: #fff;
-	padding: 1.25rem;
+	padding: 0.5rem;
 	border-radius: 50%;
+	transition: color 0.25s ease-in-out;
+}
+
+.dropdown-avatar:hover {
+	background-color: rgb(224, 240, 248);
 }
 
 .dropdown-menu {
@@ -1073,7 +1077,6 @@ a.active,
 
 table {
 	width: 100%;
-	table-layout: fixed;
 }
 
 th,
@@ -1250,6 +1253,13 @@ tbody tr.border-bottom:last-child {
 	overflow-x: auto;
 	white-space: nowrap;
 	width: auto;
+}
+
+@media (max-width: 576px) {
+	.btn-mobile-icon {
+		display: inline-flex;
+		padding: 0.5rem;
+	}
 }
 
 @media (min-width: 576px) {
