--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1090,8 +1090,20 @@ td {
 	border: inherit;
 }
 
+ul {
+	padding: 0;
+}
+
 tbody tr.border-bottom:last-child {
 	border-bottom: 0;
+}
+
+.zebra > *:nth-child(2n + 1) {
+	background-color: white;
+}
+
+.zebra > *:nth-child(2n) {
+	background-color: lightgray;
 }
 
 .text-bold {
