--- a/frontend/src/components/Button/Button.module.css
+++ b/frontend/src/components/Button/Button.module.css
@@ -152,7 +152,7 @@
 	width: 16px;
 	height: 16px;
 	border: 2px solid transparent;
-	border-top-color: #fff;
+	border-t-color: #fff;
 	border-radius: 50%;
 	animation: spin 0.8s linear infinite;
 }
